FreedomSanboxAntDeploy/src/objects/Planner_Details__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <label>Planner Details</label>
    <nameField>
        <label>Planner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planner Details</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>